# real2sim-demo

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: stage1.sceaux.full.toml  stage1.sceaux.smoke.toml  stage1.tabletop_v1.mast3r.toml  stage1.tabletop_v1.toml  stage1.tabletop_v2.mast3r.toml  stage1.tabletop_v3.mast3r.toml  stage1.windows.example.toml  stage2.tabletop_v1.toml  stage2.tabletop_v3.mast3r.toml  stage3.tabletop_v1.toml  stage3.tabletop_v3.mast3r.toml
examples/tabletop_v1_physics/: README.md  package_manifest.json  scene.mtl  scene.xml  transform.json  validation.json
reproducibility/: 2dgs.snapshot.json  REPRODUCE.md  hyworld.snapshot.json  mast3r_registration_comparison.json  physics.snapshot.json  verified_runs.json
scripts/: check_physics_env.ps1  check_stage1_env.ps1  check_stage2_env.ps1  package_physics_example.py  render_mesh_preview.py  render_physics_video.py  run_hyworld_trainer.py  run_mast3r_sfm.py
src/real2sim_demo/: __init__.py  cli.py  colmap.py  colmap_text.py  config.py  gaussian.py  mast3r.py  mesh.py  mesh_cli.py  mesh_config.py  mesh_dataset.py  mesh_diagnostics.py  mesh_pipeline.py  mesh_ply.py  (+12 more)
tests/: test_colmap.py  test_colmap_text.py  test_config.py  test_gaussian.py  test_mesh_commands.py  test_mesh_config.py  test_mesh_dataset.py  test_mesh_diagnostics.py  test_mesh_pipeline.py  test_mesh_ply.py  test_physics_collision.py  test_physics_config.py  test_physics_geometry.py  test_physics_mjcf.py  test_physics_package.py  test_physics_pipeline.py  test_pipeline.py  test_snapshot.py
(+1 files in other folders)
