[project]
name = "real2sim-demo"
version = "0.1.0"
description = "Reproducible real video to 3D Gaussian Splatting demo."
requires-python = ">=3.11"
dependencies = [
  "pillow>=10.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]
physics = [
  "coacd==1.0.11",
  "fast-simplification==0.1.13",
  "mujoco==3.10.0",
  "obj2mjcf==0.0.25",
  "trimesh==4.12.2",
]

[project.scripts]
real2sim = "real2sim_demo.cli:main"
real2sim-mesh = "real2sim_demo.mesh_cli:main"
real2sim-physics = "real2sim_demo.physics_cli:main"
real2sim-verify-snapshot = "real2sim_demo.snapshot:main"

[tool.hatch.build.targets.wheel]
packages = ["src/real2sim_demo"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-tmp -p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
exclude = [".pytest-tmp"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
exclude = ['^artifacts/', '^\.pytest-tmp/']
python_version = "3.11"
strict = true
packages = ["real2sim_demo"]
